# video_transcriber

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.code_quality/: .flake8  .pylintrc
.cursor/rules/: buenas-practicas.mdc
app/: bootstrap.py  ports.py
app/adapters/: ffmpeg_audio_extraction_adapter.py  openai_transcription_adapter.py
app/config/: __init__.py  logger.py
app/entrypoints/: dtos.py  fastapi_app.py
app/service/: manager.py
